@@ -5,4 +5,4 @@ set -e
 SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 cd "${RADIALE_HOME:-$SCRIPT_DIR}"
 
-exec clojure -i config/setup.clj
+exec clojure -J--add-opens=java.base/java.nio=ALL-UNNAMED -i config/setup.clj
